testdata/language-features/basic-list/list16.reject.out
type error: can not unify
[32m'List 'Char[m
with
[32m'Char[m

in testdata/language-features/basic-list/list16.reject.lc:1:13:
value = 'h':'i'
            ^^^

------------ trace
!type error: can not unify
[32m'List 'Char[m
with
[32m'Char[m

in testdata/language-features/basic-list/list16.reject.lc:1:13

------------ tooltips
testdata/language-features/basic-list/list16.reject.lc 1:9-1:12  Char
testdata/language-features/basic-list/list16.reject.lc 1:9-1:13  List Char -> List Char
testdata/language-features/basic-list/list16.reject.lc 1:12-1:13  {a} -> a -> List a -> List a
testdata/language-features/basic-list/list16.reject.lc 1:13-1:16  Char
